--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,22 +32,22 @@
 
         <activity android:name=".PhrasesActivity"
                   android:label="@string/category_phrases"
-            >
+                  android:parentActivityName="com.example.android.miwok.MainActivity" >
         </activity>
 
         <activity android:name=".NumbersActivity"
                   android:label="@string/category_numbers"
-            >
+                  android:parentActivityName="com.example.android.miwok.MainActivity" >
         </activity>
 
         <activity android:name=".FamilyActivity"
                   android:label="@string/category_family"
-            >
+                  android:parentActivityName="com.example.android.miwok.MainActivity" >
         </activity>
 
         <activity android:name=".ColorsActivity"
                   android:label="@string/category_colors"
-            >
+                  android:parentActivityName="com.example.android.miwok.MainActivity" >
         </activity>
 
     </application>
